[package]
name = "dictcc"
version = "0.1.1"
authors = ["Mathias Lengler", "Kevin Deggelmann"]
license = "GPL-3.0"
description = "Rust API for reading and querying the dict.cc offline translation database."
readme = "README.md"
repository = "https://github.com/kedeggel/dictcc-rust"
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "ci/*"
]

[badges]
travis-ci = { repository = "kedeggel/dictcc-rust" }
appveyor = { repository = "kedeggel/dictcc-rust" }

[dependencies]
csv = "1.0.0-beta.5"
failure = "0.1.1"
htmlescape = "0.3.1"
serde = "1"
serde_derive = "1"
nom = "3.2.1"
log = "0.4.1"
regex = "0.2"
prettytable-rs = "0.6.7"
itertools = "0.7.6"
colored = "1.6.0"

# CLI Depedencies
structopt = {version = "0.1", optional = true }
structopt-derive = {version = "0.1", optional = true }
app_dirs = {version = "1.1.1", optional = true }
toml = {version = "0.4.5", optional = true }
simplelog = {version = "0.5.0", optional = true }
[target.'cfg(unix)'.dependencies]
pager = "0.14.0"

[features]
cli = ["structopt", "structopt-derive", "app_dirs", "toml", "simplelog"]

[[bin]]
name = "dictcc"
path = "src/bin/cli/main.rs"
required-features = ["cli"]

[profile.release]
lto = true