[package]
name = "dictcc"
version = "0.1.1"
authors = ["Mathias Lengler", "Kevin Deggelmann"]
license = "GPL-3.0"
description = "Rust API for reading and querying the dict.cc offline translation database."
readme = "README.md"
repository = "https://github.com/kedeggel/dictcc-rust"
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "ci/*"
]

[badges]
travis-ci = { repository = "kedeggel/dictcc-rust" }
appveyor = { repository = "kedeggel/dictcc-rust" }

[dependencies]
csv = "1.0.0-beta.5"
failure = "0.1.1"
htmlescape = "0.3.1"
serde = "1.0.28"
serde_derive = "1.0.28"
nom = "3.2.1"
log = "0.4.1"
regex = "0.2.7"
prettytable-rs = "0.6.7"
itertools = "0.7.7"
colored = "1.6.0"
dunce = "0.1.1"

# CLI Depedencies
structopt = { version = "0.2.5", optional = true }
structopt-derive = { version = "0.2.5", optional = true }
app_dirs = { version = "1.1.1", optional = true }
toml = { version = "0.4.5", optional = true }
simplelog = { version = "0.5.0", optional = true }
[target.'cfg(unix)'.dependencies]
pager = "0.14.0"


# sqlite
[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
optional = true


[features]
cli = ["structopt", "structopt-derive", "app_dirs", "toml", "simplelog"]
sqlite = ["rusqlite", "simplelog"]

[[bin]]
name = "dictcc"
path = "src/bin/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "sqlite"
path = "src/bin/sqlite/main.rs"
required-features = ["sqlite"]

[profile.release]
lto = true
