[package]
name = "dictcc"
version = "0.1.1"
authors = ["Mathias Lengler", "Kevin Deggelmann"]
license = "GPL-3.0"
description = "Rust API for reading and querying the dict.cc offline translation database."
readme = "README.md"
repository = "https://github.com/kedeggel/dictcc-rust"
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "ci/*"
]

[badges]
travis-ci = { repository = "kedeggel/dictcc-rust" }
appveyor = { repository = "kedeggel/dictcc-rust" }

[dependencies]
csv = "1.0.2"
failure = "0.1.2"
htmlescape = "0.3.1"
serde = "1.0.79"
serde_derive = "1.0.79"
nom = "4.0.0"
log = "0.4.5"
regex = "1.0.5"
prettytable-rs = "0.8.0"
itertools = "0.7.8"
colored = "1.6.1"
dunce = "0.1.1"
termcolor = "1.0.4"

# CLI Depedencies
structopt = { version = "0.2.10", optional = true }
structopt-derive = { version = "0.2.10", optional = true }
app_dirs = { version = "1.2.1", optional = true }
simplelog = { version = "0.5.2", optional = true }


# sqlite
[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]
optional = true

[target.'cfg(unix)'.dependencies]
pager = "0.15.0"


[features]
cli = ["structopt", "structopt-derive", "app_dirs", "simplelog"]
sqlite = ["rusqlite", "simplelog"]

[[bin]]
name = "dictcc"
path = "src/bin/cli/main.rs"
required-features = ["cli", "sqlite"]

[profile.release]
lto = true
